--- a/vignettes/art/rmarkdown-intro.Rmd
+++ b/vignettes/art/rmarkdown-intro.Rmd
@@ -15,7 +15,7 @@ Literate Programming is concept that is almost forty years old—not much older 
 
 > Instead of imagining that our main task is to instruct a computer what to do, let us concentrate rather on explaining to human beings what we want a computer to do.
 
-In literate programming, our primary output is a report, presentation, or some other document that is intended for human consumption. However, we are able to scatter chunks of computer code throughout our document, which is then executed and the output interleaved in the document. That means there are "processing" steps of turning literate programs into finished output. These are typically called "tangling," which is extracting the computer code from your document and executing it; and "weaving," which is inserting the results of that execution into the document and compiling to a finished output. The entire process of tangling and weaving is sometimes called "knitting."
+In literate programming, our primary output is a report, presentation, or some other document that is intended for human consumption. However, we are able to scatter chunks of computer code throughout our document, which is then executed and the output interleaved in the document. That means there are "processing" steps of turning literate programs into finished output. These are typically called **tangling**, which is extracting the computer code from your document and executing it; and **weaving**, which is inserting the results of that execution into the document and compiling to a finished output. The entire process of tangling and weaving is sometimes called **knitting**.
 
 ## The Horror: It's LaTeX 😱
 
